syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.klausapp.scorecalculator.grpc";
option java_outer_classname = "AggregatedCategoryScoresProto";

service AggregatedCategoryScoresService {
  rpc getScores(AggregatedCategoryScoresRequest) returns (AggregatedCategoryScoresResponse);
}

message AggregatedCategoryScoresRequest {
  string periodStart = 1;
  string periodEnd = 2;
}

message AggregatedCategoryScoresResponse {
  message AggregatedCategoryScoresOverPeriod {
    string categoryName = 1;
    string date = 2;
    float score = 3;
  }
  repeated AggregatedCategoryScoresOverPeriod categoryScoreList = 1;
}
